CHANGELOG

When		Who		What
======================================================================================
2017-01-13 	Richard Forth   Addressed issue #34 Added more graceful
				message when apache[2]ctl is not found.
2017-01-13 	Richard Forth   Addressed issue #33 Removed Version Number
2016-12-06 	Richard Forth   Addressed issue #23 Low Uptime Warnings
2016-12-05 	Richard Forth   Addressed issue #22 Add advisory message for
				php memory limit of -1
2016-11-25 	Richard Forth   Addressed issue #6 'Check for and report on
				PHP Fatal Errors in the logs'
2016-11-25 	Richard Forth   Merged pull request #20 "fix issues around 
				maxrequestworkers value" by jboulen.
2016-11-25 	Richard Forth   Addressed Issue #5, May need further testing
2016-11-15 	Richard Forth   Addressed Issue #19, Confirmed Fixed.
2016-09-21 	Richard Forth   Addressed Issue #8, Confirmed Fixed.
2016-09-21 	Richard Forth   Addressed Issue #15, Confirmed Fixed.
2016-07-26 	Richard Forth   Bugfix for Issue #11, Confirmed Fixed.
2016-07-26 	Richard Forth   Bugfix for Issue #11, testing #3. Snagging.
2016-07-26 	Richard Forth   Bugfix for Issue #11, testing #2. To be confirmed.
2016-07-26 	Richard Forth   Bugfix for Issue #11, testing. To be confirmed.
2016-06-24 	Richard Forth   Corrected the codename for Debian 6.0 which is EOL. 
2016-06-24 	Richard Forth   Tidied up the code for checking ubuntu LTS versions. 
2016-06-22 	Richard Forth   Tidied up the changelog, lines overflowing corrected. 
2016-06-22 	Richard Forth   Added exclusion for "mod" in grep for "reached" when 
                                scanning log files for lines where MaxClients /
				MaxRequestWorkers limit has been reached. 
				Thanks to Kaz =) Change going into staging for
				him to test.
2016-06-10 	Richard Forth   Cleaned up old code, fixed up old news items and 
				information messages.
2016-06-10 	Richard Forth   Removed 'last modified item from script, as this