@@ -2,6 +2,9 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-01-13 	Richard Forth   Addressed issue #9 Find Large Logs
+				 - Mopped up some code and made the additional
+				 services check look a bit more polished..
 2017-01-13 	Richard Forth   Addressed issue #34 Added more graceful
 				message when apache[2]ctl is not found.
 2017-01-13 	Richard Forth   Addressed issue #33 Removed Version Number
